--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_nameAdmin">Admin</string>
     <string name="labelNombres">Ingrese Nombres</string>
     <string name="labelApellidos">Ingrese Apellidos</string>
-    <string name="seleccionePiso">Seleccione Piso</string>
+    <string name="seleccionePiso">Seleccione Zona</string>
     <string name="btnGrabar">Reservar</string>
+    <string name="labelCantidadPersonas">Cantidad de Personas</string>
 </resources>
