--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_nameRegister">Registro</string>
     <string name="app_nameClient">Client</string>
     <string name="app_nameAdmin">Admin</string>
+    <string name="app_nameReserva">Admin</string>
     <string name="labelNombres">Ingrese Nombres</string>
     <string name="labelApellidos">Ingrese Apellidos</string>
     <string name="seleccionePiso">Seleccione Zona</string>
